Fixed obscuring of category names in show/hide modal on mobile.

--- a/assets/stylesheets/discourse-hide-categories.scss
+++ b/assets/stylesheets/discourse-hide-categories.scss
@@ -40,9 +40,6 @@
   }
   .badge-wrapper span.badge-category {
     max-width: 20em;
-    @include breakpoint(mobile-extra-large) {
-      max-width: 30vw;
-    }
   }
 }
 
